# Haji_help3

./: .gitignore  README.md  hajj_agencies_full.xlsx  hajj_agencies_full2.xlsx  hajj_agencies_full3.xlsx  hajj_agencies_full4.xlsx  hajj_agencies_full5.xlsx  pyproject.toml  requirements.txt  text.py
