[project]
name = "haji-help3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "bs4>=0.0.2",
    "lxml>=6.0.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "plotly>=6.3.0",
    "requests>=2.32.4",
    "selenium>=4.34.2",
    "streamlit>=1.48.0",
    "webdriver-manager>=4.0.2",
]
